# Platform-gala-extension

./: .gitignore  .talismanrc  CLAUDE.md  README.md  compose.override.prod.yml  compose.override.yml  manifest.json  platform-gala.code-workspace  query_users.py  test_users.py
api-gala/: .dockerignore  Dockerfile  Dockerfile.prod  README.md  entrypoint.sh  pyproject.toml  test_users.py
api-gala/app/: main.py  utils.py
api-gala/app/api/: __init__.py  auth.py  config.py  registration.py  time.py
api-gala/app/core/: config.py  email.py  logging.py
api-gala/app/models/: __init__.py  config.py  limits.py  manager_permissions.py  registration.py  table.py  time_slots.py  user.py  vote.py
api-gala/app/queries/: table.py
api-gala/app/services/: admin_vote.py  authentik_service.py  config.py  export.py  manager_permissions.py  registration.py  storage.py  table.py  (+1 more)
api-gala/emails-src/: README.md  package.json  pnpm-lock.yaml
api-gala/templates/: accepted.html  accepted.txt  base.html  payment_confirmed.html  payment_confirmed.txt  payment_rejected.html  payment_rejected.txt  payment_reminder.html  payment_reminder.txt  registered.html  registered.txt  table_invite.html  table_invite.txt  table_joined.html  table_joined.txt
api-gala/tests/: conftest.py  test_admin_vote_service.py  test_config.py  test_deadline_utils.py  test_exports.py  test_manager_permissions.py  test_payment_upload_deadline.py  test_registration_service.py  test_registrations.py  test_table_service.py  test_table_service_extended.py  test_time_slots.py  test_vote.py  test_vote_service.py
(+219 files in other folders)
