[tool.poetry]
name = "api-gala"
version = "0.1.0"
description = "API service for jantar de gala"
authors = ["Master slave 2"]
readme = "README.md"
packages = [{include = "app"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8.1"
pydantic = "^1.10.13"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi = "^0.95.1"
loguru = "^0.7.0"
motor = "^3.1.2"
orjson = "^3.9.15"
aiocache = "^0.12.1"
aiosmtplib = "^2.0.1"
jinja2 = "^3.1.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
httpx = "^0.24.0"
pytest-asyncio = "^0.21.0"
asgi-lifespan = "^2.1.0"

[tool.poetry.group.dev.dependencies]
motor-types = {git = "https://github.com/L0RD-ZER0/Motor-Types.git"}
mypy = "^1.3.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
black = "^24.3.0"
flake8 = "^6.0.0"
types-python-jose = "^3.3.4.7"

[tool.pytest.ini_options]
pythonpath = [".", "app"]

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = ["app/tests"]
strict = true
explicit_package_bases = true

# TODO: REMOVE ME
[[tool.mypy.overrides]]
module = "aiocache.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
